--- a/package.json
+++ b/package.json
@@ -28,6 +28,9 @@
     "cross-env": "^7.0.2",
     "css-loader": "^4.2.1",
     "cssnano": "^4.1.10",
+    "eslint": "^7.8.1",
+    "eslint-config-airbnb-base": "^14.2.0",
+    "eslint-plugin-import": "^2.22.0",
     "file-loader": "^6.0.0",
     "gh-pages": "~2.0.1",
     "html-webpack-plugin": "^4.3.0",
