--- a/package.json
+++ b/package.json
@@ -19,33 +19,33 @@
   },
   "homepage": "https://github.com/elftatius/news-explorer-frontend#readme",
   "devDependencies": {
-    "@babel/cli": "^7.10.5",
-    "@babel/core": "^7.11.1",
-    "@babel/plugin-proposal-class-properties": "^7.10.4",
-    "@babel/preset-env": "^7.11.0",
-    "autoprefixer": "^9.8.6",
-    "babel-loader": "^8.1.0",
-    "cross-env": "^7.0.2",
-    "css-loader": "^4.2.1",
-    "cssnano": "^4.1.10",
-    "eslint": "^7.8.1",
-    "eslint-config-airbnb-base": "^14.2.0",
-    "eslint-plugin-import": "^2.22.0",
-    "file-loader": "^6.0.0",
-    "gh-pages": "~2.0.1",
-    "html-webpack-plugin": "^4.3.0",
-    "image-webpack-loader": "^6.0.0",
-    "mini-css-extract-plugin": "^0.10.0",
-    "optimize-css-assets-webpack-plugin": "^5.0.3",
-    "postcss-loader": "^3.0.0",
-    "style-loader": "^1.2.1",
-    "webpack": "^4.44.1",
-    "webpack-cli": "^3.3.12",
-    "webpack-dev-server": "^3.11.0",
+    "@babel/cli": "7.12.1",
+    "@babel/core": "7.12.3",
+    "@babel/plugin-proposal-class-properties": "7.12.1",
+    "@babel/preset-env": "7.12.1",
+    "autoprefixer": "9.8.6",
+    "babel-loader": "8.1.0",
+    "cross-env": "7.0.2",
+    "css-loader": "4.3.0",
+    "cssnano": "4.1.10",
+    "eslint": "7.13.0",
+    "eslint-config-airbnb-base": "14.2.1",
+    "eslint-plugin-import": "2.22.1",
+    "file-loader": "6.2.0",
+    "gh-pages": "2.0.1",
+    "html-webpack-plugin": "4.5.0",
+    "image-webpack-loader": "6.0.0",
+    "mini-css-extract-plugin": "0.10.1",
+    "optimize-css-assets-webpack-plugin": "5.0.4",
+    "postcss-loader": "3.0.0",
+    "style-loader": "1.3.0",
+    "webpack": "4.44.2",
+    "webpack-cli": "3.3.12",
+    "webpack-dev-server": "3.11.0",
     "webpack-md5-hash": "0.0.6"
   },
   "dependencies": {
-    "babel-polyfill": "^6.26.0",
-    "core-js": "^3.4.1"
+    "babel-polyfill": "6.26.0",
+    "core-js": "3.7.0"
   }
 }
