--- a/package.json
+++ b/package.json
@@ -4,7 +4,7 @@
   "description": "frontend for the thesis in Yandex.Praktikum",
   "main": "index.js",
   "scripts": {
-    "start": "rimraf dist && cross-env NODE_ENV=production webpack --mode production",
+    "build": "rimraf dist && cross-env NODE_ENV=production webpack --mode production",
     "dev": "NODE_ENV=development webpack-dev-server --mode development --open 'Google Chrome' --watch",
     "deploy": "NODE_ENV=production gh-pages -d dist"
   },
