--- a/package.json
+++ b/package.json
@@ -46,6 +46,7 @@
   },
   "dependencies": {
     "babel-polyfill": "6.26.0",
-    "core-js": "3.7.0"
+    "core-js": "3.7.0",
+    "js-cookie": "^2.2.1"
   }
 }
