--- a/package.json
+++ b/package.json
@@ -33,6 +33,7 @@
     "eslint-plugin-import": "2.22.1",
     "file-loader": "6.2.0",
     "gh-pages": "2.0.1",
+    "html-loader": "^1.3.2",
     "html-webpack-plugin": "4.5.0",
     "image-webpack-loader": "6.0.0",
     "mini-css-extract-plugin": "0.10.1",
