--- a/package.json
+++ b/package.json
@@ -6,7 +6,7 @@
   "scripts": {
     "build": "rimraf dist && cross-env NODE_ENV=production webpack --mode production",
     "dev": "NODE_ENV=development webpack-dev-server --mode development --open 'Google Chrome' --watch",
-    "deploy": "NODE_ENV=production gh-pages -d dist"
+    "deploy": "scp -r ./dist/* elftatius@178.154.230.58:news-explorer-frontend"
   },
   "repository": {
     "type": "git",
